force-app/main/default/objects/Desarrollo_o_Mejora__c/Desarrollo_o_Mejora__c.object-meta.xml
<CustomObject>
    <label>Desarrollo o Mejora</label>
    <nameField>
        <label>Nombre Producto Referencia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desarollo o Mejora</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>