force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Alcance_del_Desarrollo_o_Mejora__c.field-meta.xml
<CustomField>
    <fullName>Alcance_del_Desarrollo_o_Mejora__c</fullName>
    <inlineHelpText>Describa las caracteristicas del alcance del desarrollo, los productos que puede incluir o afectar el mercado y la infraestructura que puede solicitar o afectar.</inlineHelpText>
    <label>Alcance del Desarrollo o Mejora</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>