force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>Aplicacion__c</fullName>
    <label>Aplicación</label>
    <type>TextArea</type>
</CustomField>