force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Aprobado__c</fullName>
    <inlineHelpText>Fecha en que se aprobó el proyecto</inlineHelpText>
    <label>Aprobado</label>
    <type>Date</type>
</CustomField>