force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Breve_Descripcion_legal__c.field-meta.xml
<CustomField>
    <fullName>Breve_Descripcion_legal__c</fullName>
    <inlineHelpText>Realice la descripción de dicho documento.</inlineHelpText>
    <label>Breve Descripción</label>
    <type>TextArea</type>
</CustomField>