force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/C_digo__c.field-meta.xml
<CustomField>
    <fullName>C_digo__c</fullName>
    <label>Código</label>
    <length>10</length>
    <type>Text</type>
</CustomField>