force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Canal_de_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_Ventas__c</fullName>
    <formula>IF(TEXT( Oportunidad__r.Account.clave_delcanal__c )=&quot;03&quot;,&quot;Obras y Proyectos&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de Ventas</label>
    <type>Text</type>
</CustomField>