force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>