force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Cantidad_aplicada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_aplicada__c</fullName>
    <label>Cantidad aplicada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>