force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Caracteristicas__c.field-meta.xml
<CustomField>
    <fullName>Caracteristicas__c</fullName>
    <label>Características</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>