force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/CMP__c.field-meta.xml
<CustomField>
    <fullName>CMP__c</fullName>
    <formula>Precio_de_referencia__c / Factor_aplicable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>C MP=PB/FA		

C MP= Costo de materia prima base		
PB = Precio bruto de referencia		
FA = Factor aplicable al producto</inlineHelpText>
    <label>CMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>