force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Comentarios_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_del_Proyecto__c</fullName>
    <label>Comentarios del Proyecto</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>