force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Conclusiones__c.field-meta.xml
<CustomField>
    <fullName>Conclusiones__c</fullName>
    <label>Conclusiones</label>
    <type>TextArea</type>
</CustomField>