force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Consecuencia_Potencial_de_Falla__c.field-meta.xml
<CustomField>
    <fullName>Consecuencia_Potencial_de_Falla__c</fullName>
    <inlineHelpText>Describa las posibilidades de que falle el producto al ser aplicado o condiciones a tomar en cuenta</inlineHelpText>
    <label>Consecuencia Potencial de Falla</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>