force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Descripcion_producto__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_producto__c</fullName>
    <label>Descripción del producto</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>