force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Detallado__c.field-meta.xml
<CustomField>
    <fullName>Detallado__c</fullName>
    <inlineHelpText>Fecha en la que se cocentró toda la información del proyecto</inlineHelpText>
    <label>Detallado</label>
    <type>Date</type>
</CustomField>