force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Docto1__c.field-meta.xml
<CustomField>
    <fullName>Docto1__c</fullName>
    <label>1.Estructura en sistema (codificado)</label>
    <type>Date</type>
</CustomField>