force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Docto2__c.field-meta.xml
<CustomField>
    <fullName>Docto2__c</fullName>
    <label>2.Especificación de Producto Terminado</label>
    <type>Date</type>
</CustomField>