force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Docto3__c.field-meta.xml
<CustomField>
    <fullName>Docto3__c</fullName>
    <label>3.Especificación de Producto en Proceso</label>
    <type>Date</type>
</CustomField>