force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Duraci_n__c.field-meta.xml
<CustomField>
    <fullName>Duraci_n__c</fullName>
    <label>Duración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 a 2 meses</fullName>
            </value>
            <value>
                <fullName>2 a 4 meses</fullName>
            </value>
            <value>
                <fullName>4 a más meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>