force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Ejecutor__c.field-meta.xml
<CustomField>
    <fullName>Ejecutor__c</fullName>
    <label>Ejecutor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>