force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/En_ejecucion__c.field-meta.xml
<CustomField>
    <fullName>En_ejecucion__c</fullName>
    <inlineHelpText>Fecha en que se inicia realmente la ejecución
(Contemple tiempos de entrega desafasados)</inlineHelpText>
    <label>En ejecución</label>
    <type>Date</type>
</CustomField>