force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Entregado__c.field-meta.xml
<CustomField>
    <fullName>Entregado__c</fullName>
    <inlineHelpText>Fecha real de entrega de proyecto.</inlineHelpText>
    <label>Entregado</label>
    <type>Date</type>
</CustomField>