force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Enviar_correo__c.field-meta.xml
<CustomField>
    <fullName>Enviar_correo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar correo</label>
    <type>Checkbox</type>
</CustomField>