force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Estatus_de_la_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_la_solicitud__c</fullName>
    <label>Estatus de la solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>En proceso de aprobación</fullName>
            </value>
            <value>
                <fullName>Detenido por falta de información</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Trabajando</fullName>
            </value>
            <value>
                <fullName>Evaluación en campo</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Canalizado a I+D</fullName>
                <isActive>false</isActive>
                <label>Canalizado a I+D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>