force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Estatus_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Estatus_oportunidad__c</fullName>
    <formula>TEXT( Oportunidad__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus de la oportunidad</label>
    <type>Text</type>
</CustomField>