force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Existe_muestra__c.field-meta.xml
<CustomField>
    <fullName>Existe_muestra__c</fullName>
    <label>¿Existe muestra?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>