force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Factor_aplicable__c.field-meta.xml
<CustomField>
    <fullName>Factor_aplicable__c</fullName>
    <label>Factor aplicable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>