force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Fecha_de_validacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_validacion__c</fullName>
    <label>Fecha de validación</label>
    <type>Date</type>
</CustomField>