force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Fecha_del_documento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_del_documento__c</fullName>
    <label>Fecha del documento</label>
    <type>Date</type>
</CustomField>