force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Fecha_estimada_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_estimada_de_entrega__c</fullName>
    <label>Fecha estimada de entrega</label>
    <type>Date</type>
</CustomField>