force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Identificacion_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Identificacion_Solicitud__c</fullName>
    <formula>IF(TEXT( Tipo_de_Solicitud__c) =&quot;Desarrollo&quot;,&quot;D&quot;,IF(TEXT( Tipo_de_Solicitud__c) =&quot;Mejora&quot;,&quot;M&quot;,&quot;&quot;))&amp;IF( TEXT(Area_ID__c )=&quot;APER&quot;,&quot;A&quot;,IF(TEXT(Area_ID__c )=&quot;Concretos&quot;,&quot;C&quot;,IF(TEXT(Area_ID__c )=&quot;Pinturas y Selladores&quot;,&quot;S&quot;,&quot;&quot;)))&amp;&quot; - &quot;&amp; TEXT( Sol_area__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificación de la Solicitud</label>
    <type>Text</type>
</CustomField>