force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Informaci_n_de_la_aplicaci_n__c.field-meta.xml
<CustomField>
    <fullName>Informaci_n_de_la_aplicaci_n__c</fullName>
    <label>Información de la aplicación</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>