force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Mercado_Potencial__c.field-meta.xml
<CustomField>
    <fullName>Mercado_Potencial__c</fullName>
    <label>Mercado Potencial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Se tiene desarrollado el mercado para su venta (Empresas)</fullName>
            </value>
            <value>
                <fullName>Se tiene estudiado el mercado de venta (Proyectos)</fullName>
            </value>
            <value>
                <fullName>Se cuenta con un pronóstico para su distribución y consumo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>