force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/N_m_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>N_m_Solicitud__c</fullName>
    <displayFormat>SOL- {0}</displayFormat>
    <label>Núm. Solicitud</label>
    <type>AutoNumber</type>
</CustomField>