force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Nivel_de_Innovaci_n__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Innovaci_n__c</fullName>
    <label>Nivel de Innovación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Se cuenta con un producto similar</fullName>
            </value>
            <value>
                <fullName>Se tiene un conocimiento parcial del desarrollo y las bases para su ejecución</fullName>
            </value>
            <value>
                <fullName>Es un desarrollo nuevo y no hay un producto similar en el mercado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>