force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Nombre_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Producto__c</fullName>
    <label>Nombre del Producto</label>
    <length>150</length>
    <type>Text</type>
</CustomField>