force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Num_Factura_Razon_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Num_Factura_Razon_Perdida__c</fullName>
    <formula>IF(TEXT( Oportunidad__r.StageName )=&quot;Ganada&quot;, Oportunidad__r.facturacion__c ,IF(TEXT( Oportunidad__r.StageName )=&quot;Perdida&quot;,TEXT( Oportunidad__r.Loss_Reason__c ),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Núm. Factura/ Razón de Pérdida</label>
    <type>Text</type>
</CustomField>