force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Objetivos_del_Desarrollo_o_Mejora__c.field-meta.xml
<CustomField>
    <fullName>Objetivos_del_Desarrollo_o_Mejora__c</fullName>
    <label>Objetivos del Desarrollo o Mejora</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>