force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Observaciones_apli__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_apli__c</fullName>
    <label>Observaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>