force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto Relacionado</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Desarollo o Mejora</relationshipLabel>
    <relationshipName>Desarollo_o_Mejora</relationshipName>
    <type>Lookup</type>
</CustomField>