force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Otra_Base__c.field-meta.xml
<CustomField>
    <fullName>Otra_Base__c</fullName>
    <label>Otra Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>