force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Otro_tecnico__c.field-meta.xml
<CustomField>
    <fullName>Otro_tecnico__c</fullName>
    <label>Otro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>