force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Precio_de_mercado__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_mercado__c</fullName>
    <label>Precio de mercado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>