force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Precio_lanzamiento__c.field-meta.xml
<CustomField>
    <fullName>Precio_lanzamiento__c</fullName>
    <label>Precio de lanzamiento (Lista)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>