force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Realiza_Docto1__c.field-meta.xml
<CustomField>
    <fullName>Realiza_Docto1__c</fullName>
    <label>Realiza</label>
    <length>100</length>
    <type>Text</type>
</CustomField>