force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Rechazado__c.field-meta.xml
<CustomField>
    <fullName>Rechazado__c</fullName>
    <inlineHelpText>Fecha en que se rechazo el proyecto</inlineHelpText>
    <label>Rechazado</label>
    <type>Date</type>
</CustomField>