force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Recibido__c.field-meta.xml
<CustomField>
    <fullName>Recibido__c</fullName>
    <inlineHelpText>Fecha en que solicito el proyecto</inlineHelpText>
    <label>Recibido</label>
    <type>Date</type>
</CustomField>