force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Regi_n__c.field-meta.xml
<CustomField>
    <fullName>Regi_n__c</fullName>
    <formula>TEXT(Owner:User.Equipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Región</label>
    <type>Text</type>
</CustomField>