force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Requerido__c.field-meta.xml
<CustomField>
    <fullName>Requerido__c</fullName>
    <inlineHelpText>Incluir la fecha marcada para entrega del proyecto por el solicitante.</inlineHelpText>
    <label>Fecha de requerimiento</label>
    <type>Date</type>
</CustomField>