force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Requerimiento_de_Capital__c.field-meta.xml
<CustomField>
    <fullName>Requerimiento_de_Capital__c</fullName>
    <label>Requerimiento de Capital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Se cuentan con el capital</fullName>
            </value>
            <value>
                <fullName>Se cuenta con la aprobación de los recursos que demande el desarrollo</fullName>
            </value>
            <value>
                <fullName>Se requiere de la aprobación de los recursos que pueda ir demandando el desarrollo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>