force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Requerimientos_Funcionales__c.field-meta.xml
<CustomField>
    <fullName>Requerimientos_Funcionales__c</fullName>
    <inlineHelpText>Describa cada uno de los requerimientos funcionales y las expectativas del solicitante.</inlineHelpText>
    <label>Requerimientos Funcionales</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>