force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <formula>IF(TEXT( Area_ID__c )=&quot;Concretos&quot;,&quot;César Flores&quot;,IF(TEXT(Area_ID__c)=&quot;Pinturas y Selladores&quot;,&quot;Samuel Tinoco&quot;,IF(OR(TEXT(Area_ID__c)=&quot;Poliuretanos&quot;,TEXT(Area_ID__c)=&quot;Epóxicos&quot;,TEXT(Area_ID__c)=&quot;Asfalticos&quot;,TEXT(Area_ID__c)=&quot;Resinas&quot;),&quot;Claudia Viveros&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsable</label>
    <type>Text</type>
</CustomField>