force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Sol_area__c.field-meta.xml
<CustomField>
    <fullName>Sol_area__c</fullName>
    <label># Sol. por área</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>