force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Tamano_mercado__c.field-meta.xml
<CustomField>
    <fullName>Tamano_mercado__c</fullName>
    <label>Tamaño estimado del mercado</label>
    <type>TextArea</type>
</CustomField>