force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Tipo_de_documento_Legal__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento_Legal__c</fullName>
    <label>Tipo de documento Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norma</fullName>
            </value>
            <value>
                <fullName>Ley</fullName>
            </value>
            <value>
                <fullName>Decreto</fullName>
            </value>
            <value>
                <fullName>Resolución</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>