force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Tipo_de_empaque__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_empaque__c</fullName>
    <label>Tipo de empaque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>