force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Tipo_de_validaci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_validaci_n__c</fullName>
    <label>Tipo de validación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interna</fullName>
            </value>
            <value>
                <fullName>Externa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>