force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Ventas_estimadas_Anual__c.field-meta.xml
<CustomField>
    <fullName>Ventas_estimadas_Anual__c</fullName>
    <label>Ventas estimadas (Anual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>