force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Versión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>