force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Viabilidad_Econ_mica__c.field-meta.xml
<CustomField>
    <fullName>Viabilidad_Econ_mica__c</fullName>
    <inlineHelpText>Si cumple, describa si es un proyecto costeable, si no se necesita mucha inversión o si esta es justificada con algun proyecto de venta.

Si no cumple, justifique el por que no es viable economicamente, si los gastos son excesivos o la inversión es muy alta comparado con la proyección de ventas.</inlineHelpText>
    <label>Viabilidad Económica</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>