force-app/main/default/objects/Desarrollo_o_Mejora__c/fields/Vida_til_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Vida_til_del_producto__c</fullName>
    <label>Vida útil del producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 a 3 años</fullName>
            </value>
            <value>
                <fullName>3 a 8 años</fullName>
            </value>
            <value>
                <fullName>8 a 20 años</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>