force-app/main/default/objects/Desarrollo_o_Mejora__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estatus_de_la_solicitud__c</columns>
    <columns>Responsable__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>