force-app/main/default/objects/Desarrollo_o_Mejora__c/listViews/Mejora_Pinturas.listView-meta.xml
<ListView>
    <fullName>Mejora_Pinturas</fullName>
    <columns>Identificacion_Solicitud__c</columns>
    <columns>NAME</columns>
    <columns>Estatus_de_la_solicitud__c</columns>
    <columns>Fecha_estimada_de_entrega__c</columns>
    <columns>Ejecutor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo_de_Solicitud__c</field>
        <operation>equals</operation>
        <value>Mejora</value>
    </filters>
    <filters>
        <field>Area_ID__c</field>
        <operation>equals</operation>
        <value>Pinturas y Selladores</value>
    </filters>
    <label>Mejora Pinturas</label>
</ListView>